--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,10 @@
 hs_err_pid*
 /ExserciseL4/nbproject/private/
 /ExserciseL4/build/
+/ExcercixeL5/nbproject/private/
+/ExcercixeL5/build/
+/ExcercixeL5/dist/
+/HomeWork5/nbproject/private/
+/HomeWork5/build/
+/Homework6/nbproject/private/
+/Homework6/build/
