--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,7 @@ hs_err_pid*
 /HomeWork5/build/
 /Homework6/nbproject/private/
 /Homework6/build/
+/Homework7/nbproject/private/
+/Homework7/build/
+/Homework8/nbproject/private/
+/Homework8/build/
