--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,12 @@ hs_err_pid*
 /Homework7/build/
 /Homework8/nbproject/private/
 /Homework8/build/
+/FinishProgram/nbproject/private/
+/FinishProgramWEB/nbproject/private/
+/FinishProgramWeb/nbproject/private/
+/FinishProgramWeb/build/
+/ProgramWEB/nbproject/private/
+/FinalProjectWeb/target/
+/ExcersiseL10/nbproject/private/
+/ExcersiseL10/build/
+/ExcersiseL10/dist/
