Dont finish task 2 and 14

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,6 @@ hs_err_pid*
 /ExcersiseL10/nbproject/private/
 /ExcersiseL10/build/
 /ExcersiseL10/dist/
+/FinalTasks/nbproject/private/
+/FinalTasks/build/
+/FinalTasks/dist/
