--- a/FinalProjectWeb/src/main/webapp/WEB-INF/web.xml
+++ b/FinalProjectWeb/src/main/webapp/WEB-INF/web.xml
@@ -1,16 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" 
-            xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
-    
- 
+<web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <display-name>Test</display-name>
+    <context-param>
+        <param-name>javax.faces.PROJECT_STAGE</param-name>
+        <param-value>Development</param-value>
+    </context-param>
+    
     <servlet>
-        <servlet-name>FirstServlet</servlet-name>
-        <servlet-class>com.net.spring.finalprojectweb.FirstServlet</servlet-class>
+        <servlet-name>BankClientsServlet</servlet-name>
+        <servlet-class>com.net.spring.finalprojectweb.BankClientsServlet</servlet-class>
     </servlet>
     <servlet-mapping>
-        <servlet-name>FirstServlet</servlet-name>
+        <servlet-name>BankClientsServlet</servlet-name>
         <url-pattern>/</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>AddClientServlet</servlet-name>
+        <servlet-class>com.net.spring.finalprojectweb.AddClientServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>AddClientServlet</servlet-name>
+        <url-pattern>/AddClientServlet</url-pattern>
+    </servlet-mapping>
+  
+    <servlet>
+        <servlet-name>AccoutServlet</servlet-name>
+        <servlet-class>com.net.spring.finalprojectweb.AccoutServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>AccoutServlet</servlet-name>
+        <url-pattern>/accounts</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+        <servlet-name>AddAccountServlet</servlet-name>
+        <servlet-class>com.net.spring.finalprojectweb.AddAccountServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>AddAccountServlet</servlet-name>
+        <url-pattern>/AddAccount</url-pattern>
+    </servlet-mapping>
+    
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.css</url-pattern>
     </servlet-mapping>
 </web-app>
